src/objects/LegacyAccountID__c.object
<CustomObject>
    <description>SFDC1-782 This is a custom object with a 1:M relationship from Account to this object.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>SFDC1-782 How Account Legacy ID record is related back to the Account</description>
        <inlineHelpText>The Account to which this legacy ID is related.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legacy Account IDs</relationshipLabel>
        <relationshipName>LegacyAccountIDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (unfriendly) referencing the source record and is populated via migrating system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKIDAccount__c</fullName>
        <description>SFDC1-1752 primary key from parent where the record was created</description>
        <inlineHelpText>The SFDC Account ID of the account from which the Legacy ID originated. This ID may be different than the existing Account if the ID was added to an account that was later merged with the current account.</inlineHelpText>
        <label>PKID Account</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDAcctLegacy__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>AtL{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A unique auto generated ID for the Account Legacy ID record.</inlineHelpText>
        <label>PKID AcctLegacy</label>
        <type>AutoNumber</type>
    </fields>
    <label>Legacy Account ID</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LegacyAccountIDs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>Legacy Account IDs</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy Account IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>